[ADD] new sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card service-card">
-                        <img src="images/background.jpg" class="card-img-top" alt="Service 1">
+                        <img src="images/service1.jpg" class="card-img-top" alt="Service 1">
                         <div class="card-body">
                             <h5 class="card-title">Web Development</h5>
                             <p class="card-text">Building high-quality, responsive websites tailored to your needs.</p>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card service-card">
-                        <img src="https://via.placeholder.com/400" class="card-img-top" alt="Service 2">
+                        <img src="images/service2.jpeg" class="card-img-top" alt="Service 2">
                         <div class="card-body">
                             <h5 class="card-title">App Development</h5>
                             <p class="card-text">Creating user-friendly mobile applications for iOS and Android.</p>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card service-card">
-                        <img src="https://via.placeholder.com/400" class="card-img-top" alt="Service 3">
+                        <img src="images/service3.jpg" class="card-img-top" alt="Service 3">
                         <div class="card-body">
                             <h5 class="card-title">IT Consulting</h5>
                             <p class="card-text">Providing expert IT solutions to help businesses grow efficiently.</p>
@@ -75,5 +75,111 @@
             </div>
         </div>
     </section>
+
+    <!-- below section is a portfolio section -->
+
+    <section class="portfolio-section">
+        <div class="container">
+            <h2 class="mb-5">Our Portfolio</h2>
+            <div class="portfolio-gallery">
+                <div class="portfolio-item">
+                    <img src="https://fastly.picsum.photos/id/26/4209/2769.jpg?hmac=vcInmowFvPCyKGtV7Vfh7zWcA_Z0kStrPDW3ppP0iGI" alt="Project 1">
+                    <div class="portfolio-overlay">
+                        <h5>Project One</h5>
+                        <p>⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://fastly.picsum.photos/id/28/4928/3264.jpg?hmac=GnYF-RnBUg44PFfU5pcw_Qs0ReOyStdnZ8MtQWJqTfA" alt="Project 2">
+                    <div class="portfolio-overlay">
+                        <h5>Project Two</h5>
+                        <p>⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://fastly.picsum.photos/id/29/4000/2670.jpg?hmac=rCbRAl24FzrSzwlR5tL-Aqzyu5tX_PA95VJtnUXegGU" alt="Project 3">
+                    <div class="portfolio-overlay">
+                        <h5>Project Three</h5>
+                        <p>⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://fastly.picsum.photos/id/20/3670/2462.jpg?hmac=CmQ0ln-k5ZqkdtLvVO23LjVAEabZQx2wOaT4pyeG10I" alt="Project 4">
+                    <div class="portfolio-overlay">
+                        <h5>Project Four</h5>
+                        <p>⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://fastly.picsum.photos/id/18/2500/1667.jpg?hmac=JR0Z_jRs9rssQHZJ4b7xKF82kOj8-4Ackq75D_9Wmz8" alt="Project 5">
+                    <div class="portfolio-overlay">
+                        <h5>Project Five</h5>
+                        <p>⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://fastly.picsum.photos/id/10/2500/1667.jpg?hmac=J04WWC_ebchx3WwzbM-Z4_KC_LeLBWr5LZMaAkWkF68" alt="Project 6">
+                    <div class="portfolio-overlay">
+                        <h5>Project Six</h5>
+                        <p>⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- team info section -->
+
+    <section class="team-section">
+        <div class="container">
+            <h2 class="mb-5">Meet Our Team</h2>
+            <div class="team-gallery">
+                <div class="team-card">
+                    <img src="images/team1.jpg" alt="Team Member 1">
+                    <h5>John Doe</h5>
+                    <p>CEO & Founder</p>
+                </div>
+                <div class="team-card">
+                    <img src="images/team2.jpg" alt="Team Member 2">
+                    <h5>Jane Smith</h5>
+                    <p>Lead Developer</p>
+                </div>
+                <div class="team-card">
+                    <img src="images/team3.jpg" alt="Team Member 3">
+                    <h5>Mike Johnson</h5>
+                    <p>UI/UX Designer</p>
+                </div>
+                <div class="team-card">
+                    <img src="images/team4.png" alt="Team Member 4">
+                    <h5>Emily Davis</h5>
+                    <p>Marketing Head</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- call to action -->
+    <section class="cta-section">
+        <div class="container">
+            <div class="cta-container">
+                <h2>Let's Build Something Great Together</h2>
+                <p class="lead">Contact us today to bring your vision to life with our expert IT solutions.</p>
+                <button class="cta-btn">Get in Touch</button>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- footer of this website -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 NexTechis Software. All Rights Reserved.</p>
+            <p>
+                <a href="#">Privacy Policy</a> | 
+                <a href="#">Terms of Service</a> | 
+                <a href="#">Contact Us</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
