--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <h2 class="mb-5">Our Services</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mt-2">
                     <div class="card service-card">
                         <img src="images/service1.jpg" class="card-img-top" alt="Service 1">
                         <div class="card-body">
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mt-2">
                     <div class="card service-card">
                         <img src="images/service2.jpeg" class="card-img-top" alt="Service 2">
                         <div class="card-body">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mt-2">
                     <div class="card service-card">
                         <img src="images/service3.jpg" class="card-img-top" alt="Service 3">
                         <div class="card-body">
@@ -134,22 +134,22 @@
         <div class="container">
             <h2 class="mb-5">Meet Our Team</h2>
             <div class="team-gallery">
-                <div class="team-card">
+                <div class="team-card mt-2">
                     <img src="images/team1.jpg" alt="Team Member 1">
                     <h5>John Doe</h5>
                     <p>CEO & Founder</p>
                 </div>
-                <div class="team-card">
+                <div class="team-card mt-2">
                     <img src="images/team2.jpg" alt="Team Member 2">
                     <h5>Jane Smith</h5>
                     <p>Lead Developer</p>
                 </div>
-                <div class="team-card">
+                <div class="team-card mt-2">
                     <img src="images/team3.jpg" alt="Team Member 3">
                     <h5>Mike Johnson</h5>
                     <p>UI/UX Designer</p>
                 </div>
-                <div class="team-card">
+                <div class="team-card mt-2">
                     <img src="images/team4.png" alt="Team Member 4">
                     <h5>Emily Davis</h5>
                     <p>Marketing Head</p>
