--- a/index.html
+++ b/index.html
@@ -10,42 +10,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-lg-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">NexTechis Software</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <div class="collapse navbar-collapse d-lg-grid justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#hero_section">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#our_team">Team</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about_us">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact_us">
+                        <button class="btn btn-secondary">
+                            Contact
+                        </button>
+                    </a></li>
                 </ul>
-                <button class="btn btn-outline-secondary me-2" onclick="toggleTheme()">🌙</button>
-                <button class="btn btn-outline-primary">🔍</button>
             </div>
         </div>
     </nav>
     
     <!-- hero section for landing page -->
-    <section class="hero-section">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <h1>Providing Best Services & IT Solutions</h1>
-            <button class="btn btn-primary mt-3">Learn More</button>
+    <section class="hero-section row" id="hero_section">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="hero-content">
+                <h1>Providing Best Services & IT Solutions</h1>
+                <h6 class="intro-text">Our IT startup specializes in delivering innovative website development,
+                    tailored business solutions, and comprehensive IT services to help businesses 
+                    thrive in the digital world. We offer expert guidance on everything from 
+                    website design to seamless integration of business operations. Whether you're 
+                    looking for custom solutions or tech support, we've got you covered</h6>
+                <button class="btn btn-primary mt-3">Get Started</button>
+                <button class="btn btn-learn-more mt-3">Learn More</button>
+            </div>
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <img src="images/hero_section.jpg" alt="Our working team" id="hero_section_image">
+        </div>
+
     </section>
 
     <!-- below code is for services action -->
 
-    <section class="services-section">
+    <section class="services-section" id="services">
         <div class="container">
             <h2 class="mb-5">Our Services</h2>
             <div class="row">
-                <div class="col-md-4 mt-2">
+                <div class="col-md-4 mt-2 animate-card">
                     <div class="card service-card">
                         <img src="images/service1.jpg" class="card-img-top" alt="Service 1">
                         <div class="card-body">
@@ -54,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mt-2">
+                <div class="col-md-4 mt-2 animate-card">
                     <div class="card service-card">
                         <img src="images/service2.jpeg" class="card-img-top" alt="Service 2">
                         <div class="card-body">
@@ -63,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mt-2">
+                <div class="col-md-4 mt-2 animate-card">
                     <div class="card service-card">
                         <img src="images/service3.jpg" class="card-img-top" alt="Service 3">
                         <div class="card-body">
@@ -78,46 +92,46 @@
 
     <!-- below section is a portfolio section -->
 
-    <section class="portfolio-section">
+    <section class="portfolio-section" id="portfolio">
         <div class="container">
             <h2 class="mb-5">Our Portfolio</h2>
             <div class="portfolio-gallery">
-                <div class="portfolio-item">
+                <div class="portfolio-item animate-card">
                     <img src="https://fastly.picsum.photos/id/26/4209/2769.jpg?hmac=vcInmowFvPCyKGtV7Vfh7zWcA_Z0kStrPDW3ppP0iGI" alt="Project 1">
                     <div class="portfolio-overlay">
                         <h5>Project One</h5>
                         <p>⭐⭐⭐⭐⭐</p>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item animate-card">
                     <img src="https://fastly.picsum.photos/id/28/4928/3264.jpg?hmac=GnYF-RnBUg44PFfU5pcw_Qs0ReOyStdnZ8MtQWJqTfA" alt="Project 2">
                     <div class="portfolio-overlay">
                         <h5>Project Two</h5>
                         <p>⭐⭐⭐⭐</p>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item animate-card">
                     <img src="https://fastly.picsum.photos/id/29/4000/2670.jpg?hmac=rCbRAl24FzrSzwlR5tL-Aqzyu5tX_PA95VJtnUXegGU" alt="Project 3">
                     <div class="portfolio-overlay">
                         <h5>Project Three</h5>
                         <p>⭐⭐⭐⭐⭐</p>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item animate-card">
                     <img src="https://fastly.picsum.photos/id/20/3670/2462.jpg?hmac=CmQ0ln-k5ZqkdtLvVO23LjVAEabZQx2wOaT4pyeG10I" alt="Project 4">
                     <div class="portfolio-overlay">
                         <h5>Project Four</h5>
                         <p>⭐⭐⭐⭐</p>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item animate-card">
                     <img src="https://fastly.picsum.photos/id/18/2500/1667.jpg?hmac=JR0Z_jRs9rssQHZJ4b7xKF82kOj8-4Ackq75D_9Wmz8" alt="Project 5">
                     <div class="portfolio-overlay">
                         <h5>Project Five</h5>
                         <p>⭐⭐⭐⭐⭐</p>
                     </div>
                 </div>
-                <div class="portfolio-item">
+                <div class="portfolio-item animate-card">
                     <img src="https://fastly.picsum.photos/id/10/2500/1667.jpg?hmac=J04WWC_ebchx3WwzbM-Z4_KC_LeLBWr5LZMaAkWkF68" alt="Project 6">
                     <div class="portfolio-overlay">
                         <h5>Project Six</h5>
@@ -130,7 +144,7 @@
 
     <!-- team info section -->
 
-    <section class="team-section">
+    <section class="team-section" id="our_team">
         <div class="container">
             <h2 class="mb-5">Meet Our Team</h2>
             <div class="team-gallery">
@@ -159,7 +173,7 @@
     </section>
 
     <!-- call to action -->
-    <section class="cta-section">
+    <section class="cta-section" id="contact_us">
         <div class="container">
             <div class="cta-container">
                 <h2>Let's Build Something Great Together</h2>
