--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </nav>
     
     <!-- hero section for landing page -->
-    <section class="hero-section" id="hero_section">
+    <section class="hero-section row" id="hero_section">
         <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="hero-content row">
+            <div class="hero-content">
                 <h1>Providing Best Services & IT Solutions</h1>
                 <h6 class="intro-text">Our IT startup specializes in delivering innovative website development,
                     tailored business solutions, and comprehensive IT services to help businesses 
