--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - NextTechis Software Solutions</title>
+  <title>Index - NexTechis Software Solutions</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -36,7 +36,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.png" alt="" style="margin-top: -14px;">
-        <h5 class="sitename">NextTechis Software Solutions</h5>
+        <h5 class="sitename">NexTechis Software Solutions</h5>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -82,7 +82,7 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Welcome to NextTechis Software Solutions</h2>
+            <h2>Welcome to NexTechis Software Solutions</h2>
             <p>We are team of talented designers making websites and Providing business Solutions</p>
             <a href="#about" class="btn-get-started">Get Started</a>
           </div>
@@ -294,7 +294,7 @@
 
       </div>
 
-    </section>/Features Section
+    </section><--/Features Section -->
 
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
