--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
       </div>
 
-    </section><--! /Features Section -->
+    </section><!-- /Features Section -->
 
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
