--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">NextTechis Software Solutions</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">NexTechis Software Solutions</strong> <span>All Rights Reserved</span></p>
     </div>
 
   </footer>
