--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form  action="https://formsubmit.co/nextechissoftware@gmail.com" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
