--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@
 
           <div class="col-lg-8">
             <form  action="https://formsubmit.co/nextechissoftware@gmail.com" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <input type="hidden" name="_redirect" value="javascript:void(0);">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -683,8 +684,8 @@
 
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <div id="thank-you">✅ Thank you! Your message has been sent.</div>
+                  
 
                   <button type="submit">Send Message</button>
                 </div>
