--- a/index.html
+++ b/index.html
@@ -692,6 +692,7 @@
 
               </div>
             </form>
+            <div id="thank-you">✅ Thank you! Your message has been successfully sent.</div>
           </div><!-- End Contact Form -->
 
         </div>
