--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form  action="https://formsubmit.co/nextechissoftware@gmail.com" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form   class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <input type="hidden" name="_redirect" value="javascript:void(0);">
               <div class="row gy-4">
 
