--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
           </div>
 
-          <div class="col-lg-8">
+          <div class="col-lg-8 position-relative">
             <form  action="https://formsubmit.co/nextechissoftware@gmail.com" method="POST" id="contact-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <input type="hidden" name="_redirect" value="javascript:void(0);">
               <div class="row gy-4">
@@ -600,6 +600,10 @@
 
               </div>
             </form>
+              <!-- Loading Spinner -->
+            <div class="loading-overlay hidden-spinner" id="loading">
+              <div class="spinner">Sending...</div>
+            </div>
           </div><!-- End Contact Form -->
 
         </div>
