--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
           <p>Matiyari</p>
           <p>Lucknow, Uttar Pradesh 226028</p>
           <p>India</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+91 9119976780</span></p>
+          <p class="mt-4"><strong>Phone:</strong> <span></span></p>
           <p><strong>Email:</strong> <span>nextechissoftware@gmail.com
           </span></p>
         </div>
